Bug 328589 - Inlined attachment turned into link to user's home folder after "changing" its properties
Summary: Inlined attachment turned into link to user's home folder after "changing" it...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: incidence editors (other bugs)
Version First Reported In: 4.11.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Allen Winter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-09 18:27 UTC by fsfbugs
Modified: 2014-01-05 22:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fsfbugs 2013-12-09 18:27:15 UTC
Steps to reproduce:

Reproducible: Always

Steps to Reproduce:
1. Create a new event.
2. Add an attachment and make sure to check 'Store attachment inline'.
3. View 'Properties' of attachment via "Right click -> Properties..." and, without changing anything, press 'OK'.
Actual Results:  
Attachment is turned into a link to the user's home folder.

Expected Results:  
Third step should leave the attachment untouched.

I am using stock packages from openSUSE 13.1. Namely, korganizer version 4.11.2-1.1 and akonadi-runtime 1.10.3-4.1.
Comment 1 Allen Winter 2014-01-05 22:34:36 UTC
Git commit e4d16994c64a24a4e9d169b66c67885b5a34793e by Allen Winter.
Committed on 05/01/2014 at 22:33.
Pushed by winterz into branch 'KDE/4.12'.

improvements to the attachment editor.
better ability to switch between inline and linked attachments
FIXED-IN: 4.12.1

M  +22   -1    incidenceeditor-ng/attachmenteditdialog.cpp
M  +1    -0    incidenceeditor-ng/attachmenteditdialog.h
M  +7    -1    incidenceeditor-ng/attachmenticonview.cpp
M  +2    -0    incidenceeditor-ng/attachmenticonview.h

http://commits.kde.org/kdepim/e4d16994c64a24a4e9d169b66c67885b5a34793e
Comment 2 Allen Winter 2014-01-05 22:35:16 UTC
Git commit c8564d5c1686cc2a46b4c0ecd5ba525c4d5b70bf by Allen Winter.
Committed on 05/01/2014 at 22:33.
Pushed by winterz into branch 'master'.

improvements to the attachment editor.
better ability to switch between inline and linked attachments
FIXED-IN: 4.12.1

M  +22   -1    incidenceeditor-ng/attachmenteditdialog.cpp
M  +1    -0    incidenceeditor-ng/attachmenteditdialog.h
M  +7    -1    incidenceeditor-ng/attachmenticonview.cpp
M  +2    -0    incidenceeditor-ng/attachmenticonview.h

http://commits.kde.org/kdepim/c8564d5c1686cc2a46b4c0ecd5ba525c4d5b70bf