improvements to the attachment editor. better ability to switch between inline and linked attachments

BUG: 328589
FIXED-IN: 4.12.1