incidenceeditor-ng/attachmenticonview.cpp
@@ -77,9 +77,15 @@ const QString AttachmentIconItem::uri() const
   return mAttachment->uri();
 }
 
+const QString AttachmentIconItem::savedUri() const
+{
+  return mSaveUri;
+}
+
 void AttachmentIconItem::setUri( const QString &uri )
 {
-  mAttachment->setUri( uri );
+  mSaveUri = uri;
+  mAttachment->setUri( mSaveUri );
   readAttachment();
 }
 
